# satellite-image-classifier

./: .gitignore  CONTRIBUTING.md  README.md  RESULTS.md  count_dataset.py  pyproject.toml  run.sh  system-architecture.mermaid
app/: __init__.py  cli.py  grid_search_params.json  pipeline.py
app/core/: __init__.py  base.py  types.py
app/data/: __init__.py  dataset.py  preprocessing.py  splits.py
app/evaluation/: __init__.py  metrics.py  visualization.py
app/features/: __init__.py  base.py  combined.py  hog.py  hsv.py  lbp.py  registry.py  resnet.py
app/models/: __init__.py  base.py  gbm.py  logistic.py  registry.py  rf.py  svm.py
app/utils/: __init__.py  io.py  logging.py
grid_search/: logistic_regression_gridsearch.ipynb  logistic_regression_gridsearch_pca.ipynb  rf_gridsearch.ipynb  svm_gridsearch.ipynb
grid_search/results_rf/: final_metrics.json
grid_search/results_svm/: final_metrics.json
results/2024-12-08_12-32-37_SVM_HOGF__train0p05/: experiment_config.yaml
results/2024-12-08_15-02-23_LOGISTIC_ResNet50F__train1p00/: experiment_config.yaml
results/2024-12-08_15-56-08_SVM_HSVHistogramExtractor__train1p00/: experiment_config.yaml
results/2024-12-08_16-28-27_SVM_LBPF__train1p00/: experiment_config.yaml
results/2024-12-08_20-21-26_LOGISTIC_HOGF__train1p00/: experiment_config.yaml
results/2024-12-09_07-57-11_SVM_HSVHistogramExtractor__train1p00/: experiment_config.yaml
results/2024-12-09_10-35-01_GBM_LBPF__train1p00/: experiment_config.yaml
results/2024-12-09_16-37-24_RF_HOGF__train1p00/: experiment_config.yaml
(+74 files in other folders)
