[tool.poetry]
name = "satellite-classifier"
version = "0.1.0"
description = "A modular system for evaluating satellite image classification methods"
authors = ["Sean Sica <23294618+seansica@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
opencv-python = "^4.10.0.84"
torch = "^2.5.1"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
scikit-image = "^0.24.0"

torchvision = "^0.20.1"
pillow = "^11.0.0"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
isort = "^5.13.2"
mpy = "^0.1"
pytest-cov = "^6.0.0"
pylint = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
satellite-classify = "app.cli:main"